--- a/coming-soon.html
+++ b/coming-soon.html
@@ -2,18 +2,15 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>Cone Zone!</title>
+    <title>Coming Soon</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="assets/cone-zone-logo.png">
 </head>
 <body>
+    <div class="cover"></div>
     <div class="grid">
-        <div class="logo">
-            <img src="assets/cone-zone-logo.png">
-        </div>
-        <div class="index-btn">
-            <a href="build-zone.html"><img src="assets/lets-make-ice-cream-btn.png"></a>
-        </div>
+    <img class="coming-soon"src="assets/coming-soon-popup.png">
+    <a class="home"href="index.html"><img src="assets/home-btn.png"></a>
     </div>
     <div class="beta">beta version 0.0.2</div>
 </body>
