--- a/build-zone-level-3.html
+++ b/build-zone-level-3.html
@@ -14,7 +14,7 @@
     <div class="cover"></div>
     <div class="grid">
         <div class="title">
-            <img src="assets/level-1-banner.png">
+            <img src="assets/level-3-banner.png">
         </div>
         <div class="timer-container">
         <div class="timer"></div>
@@ -22,7 +22,7 @@
         </div>
 <!-- tutorial -->
         <div class="tutorial">
-            <img class="tutorial-bg" src="assets/tutorial-popup.png">
+            <img class="tutorial-bg" src="assets/level-3-popup.png">
             <img class="beginBtn" src="assets/begin-btn.png">
         </div>
         <div id="tutorialMenu" class="tutorial">
@@ -85,7 +85,7 @@
             </div>
         </div>
     <div class="back-btn">
-        <a href="index.html"><img src="assets/back-btn.png"></a>
+        <a href="build-zone.html"><img src="assets/back-btn.png"></a>
     </div>
 
         <div class="clear-btn">
@@ -99,8 +99,8 @@
             <img class=finishWindowBg src="assets/wrong-finish.png">
             <img id="correctFinish"class=finishWindowBg src="assets/correct-finish.png">
             <a class="finishHome" href="index.html"><img src="assets/home-btn.png"></a>
-            <a href="build-zone-level-2.html" class="nextLevel"><img src="assets/next-level-btn.png"></a>
-            <a href="build-zone.html" class="again"><img src="assets/try-again-btn.png"></a>
+            <a href="coming-soon.html" class="nextLevel"><img src="assets/next-level-btn.png"></a>
+            <a href="build-zone-level-3.html" class="again"><img src="assets/try-again-btn.png"></a>
         </div>
 
     
@@ -114,6 +114,6 @@
     </div>
 
 
-    <script src="script1.js"></script>
+    <script src="script3.js"></script>
 </body>
 </html>
