--- a/build-zone-level-3.html
+++ b/build-zone-level-3.html
@@ -55,35 +55,39 @@
     </div> 
 <!-- menu grid -->
         <div class="menu-left">
-            <img src="assets/flavor-menu.png">
-            <div class="flavors">
+            <!-- <div class="flavors"> -->
+                <img id="menu-left-bg" src="assets/flavor-menu.png">
                <div class="vanilla-btn"><img src="assets/vanilla-btn.png"></div>
                <div class="chocolate-btn"> <img src="assets/chocolate-btn.png"></div>
                <div class="strawberry-btn"> <img src="assets/strawberry-btn.png"></div>
                <div class="mint-btn"> <img src="assets/mint-btn.png"></div>
-            </div>
+            <!-- </div> -->
         </div>
+
         <div class="cone">
             <div class="base-cone"><img src="assets/cone.png"></div>
             <div class="flavor-container"></div>
 		    <div class="toppings-container"></div>
 		    <div class="cherry-container"></div>
         </div>
+
         <div class="menu-right-1">
-            <img src="assets/topping-menu.png">
-            <div class="toppings">
+            <img id="menu-right-bg" src="assets/topping-menu.png">
+            <!-- <div class="toppings"> -->
                 <div class="sprinkles-btn"><img src="assets/sprinkles-btn.png"></div>
                 <div class="chocolate-dip-btn"><img src="assets/chocolate-dip-btn.png"></div>
                 <div class="chocolate-chunks-btn"><img src="assets/chocolate-chunks-btn.png"></div>
-            </div>
+            <!-- </div> -->
         </div>
+
         <div class="menu-right-2">
-            <img src="assets/cherry-menu.png">
-            <div class="yes-no">
+            <img id="menu-right-2-bg"src="assets/cherry-menu.png">
+            <!-- <div class="yes-no"> -->
                 <div class="yes-btn"><img src="assets/yes-btn.png"></div>
                 <div class="no-btn"><img src="assets/no-btn.png"></div>
-            </div>
+            <!-- </div> -->
         </div>
+        
     <div class="back-btn">
         <a href="build-zone.html"><img src="assets/back-btn.png"></a>
     </div>
