--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
         <div class="logo">
             <img src="assets/cone-zone-logo.png">
         </div>
+        <img id="mobile" src="assets/mobile-coming-soon-popup.png">
         <div class="index-btn">
             <a href="build-zone.html"><img src="assets/lets-make-ice-cream-btn.png"></a>
         </div>
     </div>
-    <div class="beta">beta version 0.0.5</div>
+    <div class="beta">beta version 0.0.6</div>
 </body>
 </html>
